crates/nexus-store/tests/compile_fail/builder_skip_version.stderr
error[E0599]: no method named `payload` found for struct `WithVersion` in the current scope
 --> tests/compile_fail/builder_skip_version.rs:5:56
  |
5 |     let _ = pending_envelope(Version::new(1).unwrap()).payload(vec![1]);
  |                                                        ^^^^^^^ method not found in `WithVersion`
